# Catenary

./: .gitignore  .gitmodules  .pre-commit-config.yaml  404.html  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-COMMERCIAL  Makefile  PLAN.md  README.md  ROADMAP.md  TODO.md  adversarial-testing.html  ai-agents.html  architecture.html  build.rs  catenary-config.schema.json  cli-integration.html  cli.html  configuration.html  dashboard.html  deny.toml  diagnostic-filters.html  gemini-extension.json  index.html  install.sh  installation.html  lsp-fault-model.html  mockls.html  notifications.html  overview.html  plugin-architecture.html  print.html  roadmap.html  searcher-c2a407aa.js  searchindex-1bf95c55.js  searchindex-1c6df230.js  searchindex-383e25f5.js  (+21 more)
.cargo-husky/hooks/: pre-commit  pre-push
.claude-plugin/: marketplace.json
.claude-plugin/plugins/catenary/hooks/: format_tool_output.py  hooks.json
.githooks/: check-copyright.sh
.github/: CLA.md
.github/workflows/: cd.yml  ci.yml  cla.yml  docs.yml  release.yml
archive/: cli-design.html
benches/: logging_overhead.rs
crates/catenary-proc/: Cargo.toml
crates/catenary-proc/src/: lib.rs
crates/catenary-ts/: Cargo.toml
crates/catenary-ts/src/: lib.rs
data/: intensity.db  intensity_large.db  intensity_v2.db
defaults/: languages.toml
docs/: book.toml
docs/src/: README.md  SUMMARY.md  adversarial-testing.md  ai-agents.md  architecture.md  cli-integration.md  cli.md  configuration.md  dashboard.md  diagnostic-filters.md  installation.md  lsp-fault-model.md  mockls.md  notifications.md  overview.md  plugin-architecture.md  roadmap.md  smoke-testing.md  tracing-conventions.md  wait-model.md
docs/src/architecture/: README.md  configuration.md  documents.md  logging-hooks-tui.md  lsp-client.md  routing.md  session-lifecycle.md
docs/src/archive/: cli-design.md
docs/src/lsp/: README.md  css-html-json.md  go.md  javascript.md  julia.md  landscape.md  markdown.md  php.md  python.md  rust.md  shell.md  termux.md  typescript.md
hooks/: hooks.json
lsp/: css-html-json.html  go.html  index.html  javascript.html  julia.html  landscape.html  markdown.html  php.html  python.html  rust.html  shell.html  termux.html  typescript.html
plugins/catenary/: .mcp.json  README.md  config.example.toml
plugins/catenary/.claude-plugin/: plugin.json
plugins/catenary/hooks/: hooks.json
scripts/: constrained-bash.py  constrained_bash.py  test_constrained_bash.py
src/: bucketing.rs  cli.rs  config.rs  db.rs  error_layer.rs  hook.rs  install.rs  lib.rs  lock.rs  logger.rs  logging.rs  main.rs  notify.rs  restore.rs  session.rs  symbol_index.rs  ts.rs  tui.rs
src/bridge/: diagnostics_server.rs  document_manager.rs  editing.rs  editing_manager.rs  file_tools.rs  filesystem_manager.rs  grep_server.rs  handler.rs  hook_router.rs  mod.rs  path_security.rs  replace.rs  run_tool.rs  symbols.rs  sync_roots_server.rs  tool_server.rs  toolbox.rs
src/cli/: command_filter.rs  commands.rs  config_template.rs  doctor.rs  hooks.rs  mod.rs
src/config/: commands.rs  language.rs  merge.rs  mod.rs  parse.rs  server.rs  validate.rs
src/filter/: mod.rs  rust_analyzer.rs
src/hook/: mod.rs  response.rs
src/logging/: message_db.rs  mod.rs  notification_queue.rs  protocol_db.rs  trace_db.rs
src/lsp/: client.rs  connection.rs  diagnostics.rs  extract.rs  glob.rs  inbox.rs  instance_key.rs  lang.rs  manager.rs  mod.rs  params.rs  protocol.rs  server.rs  settle.rs  state.rs  types.rs  wait.rs
src/mcp/: mod.rs  server.rs  types.rs
src/protocol/: category.rs  mod.rs
src/tui/: app.rs  category.rs  data.rs  degradation.rs  filter.rs  flat.rs  format.rs  grid.rs  hints.rs  icons.rs  layout.rs  mod.rs  mouse.rs  panel.rs  pipeline.rs  render.rs  scrollbar.rs  selection.rs  theme.rs  tree.rs
test_assets/mock_grammar/: grammar.js  tree-sitter.json
test_assets/mock_grammar/queries/: tags.scm
test_assets/mock_grammar/src/: grammar.json  node-types.json  parser.c
test_assets/mock_grammar/src/tree_sitter/: parser.h
tests/: batch_diagnostics_integration.rs  cli_integration.rs  config_integration.rs  diagnostics_strategy_integration.rs  disabled_integration.rs  file_tools_integration.rs  file_watcher_integration.rs  issue_3_integration.rs  json_diagnostics_integration.rs  logging_integration.rs  logging_throughput.rs  lsp_integration.rs  lsp_log_integration.rs  map_integration.rs  mcp_integration.rs  monitor_integration.rs  profile_intensity.rs  quickfix_integration.rs  run_tool_integration.rs  version_sync.rs  warmup_diagnostics_integration.rs
tests/assets/: config.toml
tests/assets/bash/: script.sh
tests/assets/rust/src/: main.rs
tests/assets/toml/: Cargo.toml
tests/assets/yaml/: settings.yaml
tests/common/: mod.rs
tests/fixtures/profile/bash/: bad.sh
tests/fixtures/profile/markdown/: doc.md
tests/fixtures/profile/python/: bad.py
tests/fixtures/profile/rust/: Cargo.toml
tests/fixtures/profile/rust/src/: clean.rs  main.rs
tests/fixtures/profile/toml/: bad.toml
tests/fixtures/profile/yaml/: bad.yaml
tools/: analyze_intensity.py  gc_blips.py  lua_lsp_probe.py  markdown_lsp_probe.py  mockc.rs  mockls.rs  publish_diagnostics_pairs.py  python_lsp_probe.py  settle_probe.py
tui_tickets/: README.md
