[package]
name = "catenary-mcp"
version = "1.3.4"
edition = "2024"
license = "GPL-3.0-or-later"
description = "A high-performance multiplexing bridge between MCP (Model Context Protocol) and LSP (Language Server Protocol). Enables LLMs to access IDE-grade code intelligence across multiple languages simultaneously with smart routing and UTF-8 accuracy."
repository = "https://github.com/MarkWells-Dev/Catenary"
documentation = "https://markwells-dev.github.io/catenary/"
keywords = ["mcp", "lsp", "language-server", "llm", "ai"]
categories = ["development-tools"]

[lints]
workspace = true

[[bin]]
name = "catenary"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
bytes = "1.10"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5.54", features = ["derive"] }
config = "0.15.19"
crossterm = "0.28"
dirs = "6.0.0"
ignore = "0.4.25"
libc = "0.2"
lsp-types = "0.97.0"
regex = "1.10"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
url = "2.5.8"

[dev-dependencies]
tempfile = "3"
toml = "0.9.11"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
# Lint groups
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

# Hard denials — no agent should produce these
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"
wildcard_imports = "deny"

# Force agents to justify exceptions
allow_attributes_without_reason = "deny"

# Dependencies
multiple_crate_versions = "allow"

# Documentation
missing_errors_doc = "warn"
missing_panics_doc = "warn"
missing_safety_doc = "warn"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
opt-level = 3
strip = "symbols"
