[package]
name = "catenary-proc"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "Single-process CPU sampling for tick-budget diagnostics waits"
repository = "https://github.com/MarkWells-Dev/Catenary"
readme = "../../README.md"
keywords = ["process", "cpu", "sampling"]
categories = ["os"]

[lints.rust]
unsafe_code = "allow" # Platform FFI — all unsafety confined to this crate.

[lints.clippy]
# Inherit most workspace lints but allow unsafe-related patterns
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
missing_errors_doc = "warn"
missing_panics_doc = "warn"
missing_safety_doc = "warn"
multiple_crate_versions = "allow"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_System_Threading",
    "Win32_Foundation",
] }
