[package]
name = "catenary-proc"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
description = "Single-process CPU sampling for tick-budget diagnostics waits"
repository = "https://github.com/MarkWells-Dev/Catenary"
readme = "../../README.md"
keywords = ["process", "cpu", "sampling"]
categories = ["os"]

[lints.rust]
unsafe_code = "allow" # Platform FFI — all unsafety confined to this crate.
missing_docs = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"
wildcard_imports = "deny"
allow_attributes_without_reason = "deny"
multiple_crate_versions = "allow"
missing_errors_doc = "warn"
missing_panics_doc = "warn"
missing_safety_doc = "warn"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_System_Threading",
    "Win32_System_JobObjects",
    "Win32_Foundation",
    "Win32_System_ProcessStatus",
    "Win32_System_Diagnostics_ToolHelp",
] }
