[package]
name = "catenary-ts"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "Safe FFI wrapper for loading tree-sitter grammars from shared libraries"
repository = "https://github.com/MarkWells-Dev/Catenary"
readme = "../../README.md"
keywords = ["tree-sitter", "grammar", "ffi"]
categories = ["development-tools"]

[lints.rust]
unsafe_code = "allow" # Grammar loading FFI — all unsafety confined to this crate.

[lints.clippy]
# Inherit most workspace lints but allow unsafe-related patterns
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
missing_errors_doc = "warn"
missing_panics_doc = "warn"
missing_safety_doc = "warn"
multiple_crate_versions = "allow"

[dependencies]
tree-sitter = "0.24"
libloading = "0.8"
anyhow = "1"
