[package]
name = "catenary-ts"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
description = "Safe FFI wrapper for loading tree-sitter grammars from shared libraries"
repository = "https://github.com/TwoWells/Catenary"
readme = "../../README.md"
keywords = ["tree-sitter", "grammar", "ffi"]
categories = ["development-tools"]

[lints.rust]
unsafe_code = "allow" # Grammar loading FFI — all unsafety confined to this crate.
missing_docs = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"
wildcard_imports = "deny"
allow_attributes_without_reason = "deny"
multiple_crate_versions = "allow"
missing_errors_doc = "warn"
missing_panics_doc = "warn"
missing_safety_doc = "warn"

[dependencies]
tree-sitter = "0.24"
libloading = "0.8"
anyhow = "1"
